--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/icon.jpg>
+  <meta name="description" content="Thisismyresume">
+  <meta name="author" content="862145463">
 
-  <title>John Doe - Business Administration</title>
+  <title>Genesis Cutuc - Film Major</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Genesis Cutuc</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/GenesisCutuc.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,32 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Genesis Cutuc
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">The Phone Rings...Casey: Hello? Man: Hello? Casey: Yes?Man: Who is this? Casey: Who are you trying to reach?Man: What number is this? Casey: What number are you trying to reach?Man: I don’t know. Casey: I think you have the wrong number. Man: Do I?Casey: It happens. Take it easy. Casey hangs up… Outside the front of Casey's house, a swing dangles from the tree. It is swaying softly...The phone rings again...Casey: Hello? Man: I’m sorry I guess I dialed the wrong number. Casey: So why’d you dial it again? Man: To apologize. Casey: You’re forgiven. Bye now. Man: Wait! Wait! Don’t hang up! Casey: What? Man: I want to talk to you for a second. Casey: They’ve got 900 numbers for that. C-ya.Casey hangs up again...
+The Phone rings again...Casey: Hello? Man: Why don’t you want to talk to me? Casey: Who is this? Man: You tell me your name I’ll tell you mine. Casey: I don’t think so. Casey has opened a popcorn packet, with Jiffy Pop written on the label, she gives it a shake...Man: What’s that noise? Casey: Popcorn. Man: You’re making popcorn? Casey: Uh-huh. Man: I only eat popcorn at the movies. Casey: Well, I’m getting ready to watch a video. Man: Really? What? Casey: Oh. Just some scary movie. Man: You like scary movies? Casey: Uh-huh. Man: What’s your favorite scary movie? Casey: Uh, I don’t know. Man: You have to have a favorite. What comes to mind? Casey picks up a large knife from a wooden block which is obviously been made for holding knives Casey: Umm....Halloween.She drops the knife back in.... Casey: You know the one guy in the white mask that walks around and stalks babysitters. Man: Yeah. Casey: What’s yours? Man: Guess. Casey: Um..Nightmare on Elm Street. Man: Is that the one with the guy that has knives for fingers? Casey: Yeah, Freddy Kruger. Man: Freddy, that’s right. Man: I like that movie. It was scary. Casey walks out of the kitchen and heads towards the living room...Casey: The first one was but, the rest sucked. Man: So, you got a boyfriend? Casey: Why? You want to ask me out on a date? Man: Maybe. Man: So, do you have a boyfriend? Casey: mmm..no. Casey turns on the patio lights and looks at the backyard, there is a slight and mystic mist floating over the pool... she turns the lights off again Man: You never told me your name. Casey: Why do you want to know my name? Man: So I know who I am looking at. Casey looks worried...Casey: What did you say? Man: I wanna know who I am talking to. Casey: That’s not what you said. Man: What do you think I said? Man: What? Man: Hello? Casey: Look, I got to go. Man: Wait! I thought we were going to go out? Casey: Uh-nah. I don’t think so. Man: Don’t hang up on me!
+Casey hangs up... scared... she starts to walk back to the kitchen...The phone rings again( slightly frightend and pissed off ) Casey: Shit. Casey picks up... once again… ( annoyed tone )Casey: Yes? Man: I told you not to hang up on me. Casey: What do you want? Man: To talk. Casey: Well, dial someone else. Okay? Casey hangs up... She walks into the kitchen, and sees that the popcorn is on fire, she walks fast over to it, grabs a towel and picks up the burning popcorn… The phone rings again... she drops the pop corn back onto the stove....
+( angry ) Casey: Listen asshole-- Man: No, you listen you little bitch! You hang up on me again, I’ll gut  you like a fish. You understand? ( menacing laugh) Hehe...Yeah. ( sobbing ) Casey: Is this some kind of joke? Man: More of a game really. Can you handle that...? ...Blondie? Casey looks outside the windows, frantically… Man: Can you see me? ( determined ) Casey: Listen, I am two seconds away from calling the police. Man: They’d never make it in time were in the middle of nowhere. ( sobbing again... ) Casey: What do you want? Man: To see what you’re insides look like. Casey's eyes widen, and she hangs up… Casey is near the door, and the door bell rings… ( sobbing ) Casey: Who’s there? Who’s there? I’m calling the police! 
+<br><br>
 
-        Enter bio here<br><br>
+        The phone rings... Casey cries out loud, and listens into the phone… Man: You should never say “Who’s there?” Don’t you watch scary movies? It’s a death wish. You might as well come out and investigate a strange noise or somethin’. ( determined, yet still sobbing ) Casey: Look, you’ve had your fun now. So, I think you better just leave or else. Man: Or else what? Casey: Or else my boyfriend will be here any second, and he’ll be pissed when he finds out. Man: I thought you didn’t have a boyfriend? Casey: I lied, I do have a boyfriend and he’ll be here any second. So, your ass better be gone. Man: Sure. Casey: I swear. ( loud and hoping the guy on the other end of the phone would take the hint ) Casey: He’s big and he plays football and he’ll kick the shit out of you! ( sarcastic ) Man: I’m getting scared, I am shaking in my boots. ( defeated) Casey: So, you just better leave. Man: His name wouldn’t be....Steve would it? ( shocked ) Casey: How do you know his name? Man: Turn on the patio lights ...again. Casey turns on the lights, and see's her boyfriend, Steve Orith tied to a chair, his mouth is covered in duct tape, he is bruised and has a few cuts. Casey: Oh god! Casey unlocks the door and opens it and is about to step outside… Man: I wouldn’t do that if I was you! Casey pulls the door closed quickly and locks it. Casey: Where are you? Man: Guess. Casey: Don’t hurt him. Man: That all depends on you. Casey: Why are you doing this? Man: I wanna play a game. Casey: No. Man: Then he dies right now. Casey: NO. NO! Man: Which is it? Which is it? Casey: Wha- - What kind of game? ( evilly ) Man: Turn off the lights, You’ll see what kind of game. Just 
+do it! Casey turns off the lights… ( muffled ) Steve: Casey! No! No! NO! CASEY! Man: Here’s how to play. I ask you a question, If you get it right  Steve lives. Casey: Please, don’t do this. Casey hides behind the TV and pulls out the cord for the light on top of the TV...Man: Come on, It’ll be fun! Casey: Please-- Man: It’s an easy category. Casey: Please. Man: Movie Trivia. Man: I’ll give you a warm-up question. Casey: Don’t do this, I can’t. Man: Name the killer in Halloween? Casey: No. Man: Come on, It’s your favorite scary movie remember? Man: He had a white mask and he stalked babysitters. Casey: I don’t know. Man: Come on, Yes you do. Casey: No, please. Man: What’s his name? Casey: I can’t think. Man: Steve’s counting on you. ( still sobbing... ) Casey: Michael ...Michael Myers. Man: Yes! Very good. Man: Now for the real question. Casey: NO! Man: But, you’re doing so well. We can’t just stop now. Casey: Please, Stop! Leave us alone. Man: Then answer the question. Same category. Casey: Oh, please stop. Man: Name the killer in Friday the 13th? Casey jumps up, all excited, she knows the answer… (shouting) Casey: Jason! Jason! Jason! Man: I’m sorry that’s the wrong answer. Casey: No it’s not! No it’s not! It’s Jason! Man: Afraid not, NO WAY! ( annoyed cause she thinks she is right ) Casey: Listen, it was Jason! I saw that movie 20 god damn times! Man: Then you should know that the original killer was Jason’s mother, Mrs. Voorhies. Jason didn’t show up till the sequel. I’m afraid that was the wrong answer. ( sobbing again... ) Casey: You tricked me... Man: Lucky for you there is a bonus round. But, poor Steve, I am afraid he’s out! Casey turns on the lights and looks out side, and sees her boyfriend has been slaughtered, his insides on the outside. She starts to cry again. Casey crawls back behind the TV… Man: Hey, we’re not finished yet. Final question, Are you ready? Casey: Please, Please, Leave me alone! Man: Answer the question and I will! Man: What door am I at? Casey looks up from behind the televison at both doors, the main door and the patio doors... She also grabs a letter opener to use as a weapon if he got to her… Casey: What? Man: There are two main doors to your house, the front door and the patio door. Very Simple. Casey: I can’t do this, I can’t, I won’t.
+<br><br>
 
-        Enter bio here
+        Man: Your call. A chair flies through the patio doors Casey gets up and runs into the kitchen, she runs behind the kitchen island and grabs the knife she handled before… Casey 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/genesis-cutuc-b08082180">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/GenesisCutuc">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/BUNNYbitxch">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:gigi01ct@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -95,9 +101,9 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Organized books at library<br> 
+              • Cared for children under the age of ten<br>
+              • Understands hot to work microsoft excel<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -152,11 +158,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
+            <div class="subheading mb-3">Film Production</div>
             <div>MBA in International Business</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2019 - May 2023</span>
           </div>
         </div>
 
@@ -191,7 +197,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/pictureone.jpg" width="500px">
+            <img src="img/picturetwo.jpg" width="500px">
+            <img src="img/picturethree.jpg" width="500px">
+            <img src="img/picturefour.jpg" width="500px">
         </center>
       </div>
     </section>
